# GPT

./: .gitignore  attention.ipynb  bigram.py  inspect.ipynb  main.py  model_sd.txt  more.txt  pyproject.toml  v2.py
